Emphasising SRE and chaos engineering experience

--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@ hand -->
 <ul>
 <li><strong>Platform Engineering</strong> (July 2020 - Present)<ul>
 <li>Architected an internal PaaS for cloud-native software deployments using OpenShift, ArgoCD, 
-  AWS, and open-source controllers including KIAM, kubernetes-external-secrets, cert-manager, etc.</li>
+  AWS, and open-source controllers including KIAM, kubernetes-external-secrets, cert-manager</li>
 <li>Monitored the Kubernetes control plane and ingress requiring 99.99% uptime using DataDog and 
   Elastic Stack</li>
 <li>Contributed various fixes to open-source controllers&rsquo; deployment manifests and source, 
@@ -43,10 +43,12 @@ hand -->
 </ul>
 </li>
 <li><strong>Keystone Authentication Services</strong> (Aug 2018 - July 2020)<ul>
-<li>Migrated a neglected OpenLDAP server pair, eventually deploying a replicated cluster of 20+ 
-  servers in multiple datacenters across the US</li>
-<li>Built, maintained, and tuned a highly-available, lightweight Java webserver backed by LDAP 
-  in order to provide a unifying OIDC client credentials flow to secure our APIs</li>
+<li>Rolled out replicated OpenLDAP clusters of 40+ servers in multiple datacenters across the 
+  US</li>
+<li>Developed custom tooling in Golang, Java, and Ansible to provide structured logs, <br />
+  OpenMetrics, and chaos scripts for our LDAP clusters</li>
+<li>Built a cloud-native Java webserver backed by LDAP in order to provide a single OAuth 
+  client credentials flow to secure our APIs</li>
 <li>Implemented cheap health checking and load-balancing for multi-region applications using 
   multi-value Route53 DNS records</li>
 <li>Integrated various OAuth applications with Okta SSO and attended the Oktane 2019 conference</li>
@@ -97,7 +99,7 @@ hand -->
 <p>Provides a rigorous academic experience, research opportunities and access to the latest data science and computational science methodologies and tools.</p>
 <ul>
 <li>Conducted data analysis of geo-coded Tweets, 911, and 311 datasets from the time of the Boston 
-    Marathon Bombings with a team of fellow interns</li>
+    Marathon Bombings</li>
 <li>Developed a Python module for plotting geo-coded data over maps of the greater Boston area</li>
 <li>Experimented with Twitter sentiment analysis using a variety of classifiers from Python’s 
     scikit-learn</li>
@@ -105,7 +107,7 @@ hand -->
     HP ML APIs</li>
 </ul>
 <h2>Projects</h2>
-<h3><span>Ethernetes</span> <span>Fall 2020 - Present</span></h3>
+<h3><span><a href="https://github.com/hfuss/ethernetes">Ethernetes</a></span> <span>Fall 2020 - Present</span></h3>
 <ul>
 <li>A homemade GPU cluster for Ethereum mining, deep learning, and simulations managed via 
     Kubernetes</li>
@@ -125,11 +127,6 @@ hand -->
     collected from MOBA gameplay</li>
 </ul>
 <h3><span><a href="https://github.com/hfuss">Open Source Contributions</a></span></h3>
-<ul>
-<li>Contributor and sometimes patch maintainer for <a href="https://github.com/summerwind/actions-runner-controller">summerwind/actions-runner-controller</a></li>
-<li>Various Helm chart, Docker image, and Golang contributions to third-party controllers including 
-    ArgoCD, DataDog, and RedHat&rsquo;s Keycloak</li>
-</ul>
 <h2>Skills</h2>
 <ul>
 <li><strong>Programming</strong>: Golang, Java, Python, Bash, Typescript</li>
@@ -139,7 +136,7 @@ hand -->
 <li><strong>CI/CD</strong>: GitHub Actions, ArgoCD, Jenkins on OpenShift</li>
 <li><strong>Cloud</strong>: OpenShift / Kubernetes, AWS EC2, oVirt</li>
 <li><strong>Observability</strong>: DataDog, Kibana, Prometheus</li>
-<li><strong>Datastores</strong>: OpenLDAP, MariaDB, Kafka, Redis, Elasticsearch, etcd</li>
+<li><strong>Data Stores</strong>: OpenLDAP, MariaDB, Kafka, Redis, Elasticsearch, etcd</li>
 <li><strong>Operating Systems</strong>: CentOS, Ubuntu</li>
 <li><strong>Load Balancing</strong>: HAProxy, F5, AWS ELBv2</li>
 </ul>
