providing link to proxy trailer

--- a/resume.html
+++ b/resume.html
@@ -112,7 +112,7 @@ hand -->
 <li>A homemade GPU cluster for Ethereum mining, deep learning, and simulations managed via
     Kubernetes</li>
 </ul>
-<h3><span>Proxy (video game)</span> <span>Spring 2015 - Fall 2016</span></h3>
+<h3><span><a href="https://www.youtube.com/watch?v=RihLS9o6hew">Proxy</a> (video game)</span> <span>Spring 2015 - Fall 2016</span></h3>
 <ul>
 <li>A 2D puzzle platformer designed and programmed using Unity and C# scripting</li>
 <li>Featured moving platforms, lasers, parallax scrolling, particle effects, time trial mode and
