Edits from the Lad

--- a/resume.html
+++ b/resume.html
@@ -20,19 +20,20 @@ line. It is intended to be used for contact details -->
 is intended to be used for a short summary. -->
 
 <p>Site Reliability Engineer (SRE) with experience in delivering and maintaining
-cloud-native webservices. Former Research Assistant applying High Performance Computing (HPC) and Machine Learning (ML) for simulations / analytics.</p>
+cloud-native webservices on-premise and in AWS. Former Research Assistant applying
+High Performance Computing (HPC) and Machine Learning (ML) for simulations / analytics.</p>
 <p>Enjoys providing the prototypes, technical glue, and planned work for teams to succeed. Passionate
 in using Kubernetes and open-source technologies to efficiently build and intelligently operate
-software applications.</p>
+software applications across clouds.</p>
 <h2>Experience</h2>
 <!-- You have to wrap the "left" and "right" half of these headings in spans by
 hand -->
-<h3><span>Software Developer / SRE, Bandwidth</span> <span>Jan 2017 &ndash; Present</span></h3>
-<p>Cloud-ready voice, messaging, and 911 built for enterprise. Only API platform provider that owns a Tier 1 network, giving better quality, rates, and control.</p>
+<h3><span>Software Developer / SRE, <a href="https://bandwidth.com">Bandwidth</a></span> <span>Jan 2017 &ndash; Present</span></h3>
 <ul>
 <li><strong>Platform Engineering</strong> (July 2020 - Present)<ul>
-<li>Architected an internal PaaS for cloud-native software deployments using OpenShift, ArgoCD,
-  AWS, and open-source controllers including KIAM, kubernetes-external-secrets, cert-manager</li>
+<li>Architected an internal PaaS for cloud-native software deployments using 
+  OpenShift, ArgoCD, AWS, and open-source controllers</li>
+<li>Deployed the internal platform in the US and EU across multiple existing clusters</li>
 <li>Monitored the Kubernetes control plane and ingress requiring 99.99% uptime using DataDog and
   Elastic Stack</li>
 <li>Contributed various fixes to open-source controllers&rsquo; deployment manifests and source,
@@ -49,8 +50,8 @@ hand -->
   OpenMetrics, and chaos scripts for our LDAP clusters</li>
 <li>Built a cloud-native Java webserver backed by LDAP in order to provide a single OAuth
   client credentials flow to secure our APIs</li>
-<li>Implemented cheap health checking and load-balancing for multi-region applications using
-  multi-value Route53 DNS records</li>
+<li>Implemented cost-effective health checking and load-balancing for multi-region applications 
+  using multi-value Route53 DNS records</li>
 <li>Integrated various OAuth applications with Okta SSO and attended the Oktane 2019 conference</li>
 <li>Wrote and upheld SLO of 99.995% login requests would be less than 500ms and successful (or
   not result in server error)</li>
@@ -71,13 +72,11 @@ hand -->
   blue / green deployments of stateful SIP servers and MM4 / SMTP gateways</li>
 <li>Deployed various webservices and workers in AWS which required RDS Postgres, ElastiCache,<br />
   and SQS</li>
-<li>Modified our call engine to use our internal text-to-speech (TTS) API circuit breaking
-  between AWS Polly and a third-party TTS vendor</li>
+<li>Modified our call engine gateway to have calls use our internal text-to-speech (TTS) API</li>
 </ul>
 </li>
 </ul>
-<h3><span>Software Engineering Intern, RedHat</span> <span>May &ndash; Aug 2016</span></h3>
-<p>World&rsquo;s leading provider of open source solutions, using a community-powered approach to provide reliable and high-performing cloud, virtualization, storage, Linux, and middleware technologies.</p>
+<h3><span>Software Engineering Intern, <a href="https://redhat.com">RedHat</a></span> <span>May &ndash; Aug 2016</span></h3>
 <ul>
 <li>Worked as a full stack developer on an internal containerized application used by Red Hat’s
     Support Delivery team</li>
@@ -85,9 +84,9 @@ hand -->
     multiprocessing library, MongoDB, and AngularJS</li>
 </ul>
 <h3><span>Research Assistant, NCSU - <a href="https://www.mse.ncsu.edu/yingling/">Yingling Research Group</a></span> <span>Nov 2013 &ndash; May 2016</span></h3>
-<p>A simulations and informatics research group specializing in soft materials, led by Dr. Yaroslava Yingling.</p>
 <ul>
-<li>Wrote a C++ shared library and Python binding for initializing and post-processing coarse-grained simulations</li>
+<li>Wrote a C++ shared library and Python binding for initializing and post-processing 
+    coarse-grained simulations</li>
 <li>Implemented a cell-list algorithm for determining clusters of objects in 3D space with Periodic
     Boundary Conditions</li>
 <li>Submitted simulations and other programming scripts on HPC and GPU clusters using IBM LSF and
@@ -96,7 +95,6 @@ hand -->
     and <a href="http://pubs.rsc.org/en/content/articlelanding/2014/sm/c5sm01742d#!divAbstract">Soft Matter (08/18/2015)</a>, and won several poster presentations in the Research Triangle area</li>
 </ul>
 <h3><span>REU Intern, Harvard - <a href="https://iacs.seas.harvard.edu/">Institute for Applied Computation Science</a></span> <span>June &ndash; Aug 2015</span></h3>
-<p>Provides a rigorous academic experience, research opportunities and access to the latest data science and computational science methodologies and tools.</p>
 <ul>
 <li>Conducted data analysis of geo-coded Tweets, 911, and 311 datasets from the time of the Boston
     Marathon Bombings</li>
@@ -109,8 +107,8 @@ hand -->
 <h2>Projects</h2>
 <h3><span><a href="https://github.com/hfuss/ethernetes">Ethernetes</a></span> <span>Fall 2020 - Present</span></h3>
 <ul>
-<li>A homemade GPU cluster for Ethereum mining, deep learning, and simulations managed via
-    Kubernetes</li>
+<li>A work-in-progress, home-made Kubernetes cluster of GPU servers for exploring
+    mining, staking, dapps, deep learning, operators, and more</li>
 </ul>
 <h3><span><a href="https://www.youtube.com/watch?v=RihLS9o6hew">Proxy</a> (video game)</span> <span>Spring 2015 - Fall 2016</span></h3>
 <ul>
@@ -130,13 +128,13 @@ hand -->
 <h2>Skills</h2>
 <ul>
 <li><strong>Programming</strong>: Golang, Java, Python, Bash, Typescript</li>
-<li><strong>Frameworks</strong>: Operator SDK, Spring Boot, Flask</li>
+<li><strong>Frameworks</strong>: Operator SDK, Spring Boot, Flask, OAuth 2.0, OIDC</li>
 <li><strong>Provisioning</strong>: Helm, Ansible, Terraform, AWS CloudFormation</li>
 <li><strong>Packaging</strong>: Docker, Maven, make, Packer</li>
 <li><strong>CI/CD</strong>: GitHub Actions, ArgoCD, Jenkins on OpenShift</li>
-<li><strong>Cloud</strong>: OpenShift / Kubernetes, AWS EC2, oVirt</li>
+<li><strong>Virtualization</strong>: OpenShift / Kubernetes, AWS EC2, oVirt</li>
 <li><strong>Observability</strong>: DataDog, Kibana, Prometheus</li>
-<li><strong>Data Stores</strong>: OpenLDAP, MariaDB, Kafka, Redis, Elasticsearch, etcd</li>
+<li><strong>Data Stores</strong>: OpenLDAP, MariaDB, Redis, Kafka, Elasticsearch, etcd</li>
 <li><strong>Operating Systems</strong>: CentOS, Ubuntu</li>
 <li><strong>Load Balancing</strong>: HAProxy, F5, AWS ELBv2</li>
 </ul>
@@ -146,11 +144,12 @@ hand -->
 <li><strong>GPA</strong>: 4.0</li>
 <li><strong>Minor</strong>: Materials Science</li>
 </ul>
-<!-- ### <span>Florida Southern College</span> <span>Aug 2012 -- July 2013</span>
-
-  - **GPA**: 4.0
-  - Pursued BS in Math and Chemistry
-  - Researched optimizing the sphericity of baseballs using the seam curvature Fourier Analysis
-    implemented in MATLAB --></div>
+<h3><span>Florida Southern College</span> <span>Aug 2012 &ndash; July 2013</span></h3>
+<ul>
+<li><strong>GPA</strong>: 4.0</li>
+<li>Pursued BS in Math and Chemistry</li>
+<li>Researched optimizing the sphericity of baseballs using the seam curvature Fourier Analysis
+    implemented in MATLAB</li>
+</ul></div>
 </body>
 </html>
