--- a/resume.html
+++ b/resume.html
@@ -128,7 +128,7 @@ hand -->
 <h2>Skills</h2>
 <ul>
 <li><strong>Programming</strong>: Golang, Java, Python, Bash, Typescript</li>
-<li><strong>Frameworks</strong>: Operator SDK, Spring Boot, Flask, OAuth 2.0, OIDC</li>
+<li><strong>Frameworks</strong>: Operator SDK, Gin, Spring Boot, Flask, Express, OAuth 2.0, OIDC</li>
 <li><strong>Provisioning</strong>: Helm, Ansible, Terraform, AWS CloudFormation</li>
 <li><strong>Packaging</strong>: Docker, Maven, make, Packer</li>
 <li><strong>CI/CD</strong>: GitHub Actions, ArgoCD, Jenkins on OpenShift</li>
